fixed date bug on ios

--- a/main.css
+++ b/main.css
@@ -83,7 +83,7 @@ html, body {
 
 .venue-img {
     padding: 10px;
-    border-radius: 35%;
+    border-radius: 20%;
 }
 
 .fsq-attribution {
